# monapmc

./: .gitignore  Journal.md  L2.md  L2VSNSimus.md  Makefile  README.html  README.md  Steps.md  ToyModel.md  easyABC_Steps.R  easyABC_lenormand2012.R  make-profile.fish  make.fish  make2.hs  report.html  run.fish  test.fish
blocks-simulations/: build.sbt
blocks-simulations/src/main/scala/: SimulationSampleParams.scala  SimulationSampleParamsLenormand2012.scala  SimulationSampleParamsSteadyState.scala  SimulationsSteps.scala  ToyModel.scala
css/: style.css
formulas/: .ghci  Dockerfile  cached  formulas.aux  formulas.cabal  formulas.ps  simulation-specifications  stack.yaml
formulas/app/: HaskFile.hs  Main.hs  Main.hs_old  ProfTest.hs  SimulationCmd.hs  Template.hs
formulas/src/: .gitignore  Algorithm.hs  CSV.hs  Distribution.hs  EpsilonVSTime.hs  Experiment.hs  Figure.hs  Formulas.hs  Input.hs  L2.hs  L2VSNSimus.hs  Main.hs  Model.hs  MonPar.hs  Output.hs  Replications.hs  Report.hs  Run.hs  Simulation.hs  Statistics.hs  Steps.hs  ToyModel.hs  Util.hs  VSTime.hs
formulas/src/ABC/: Lenormand2012.hs  MonAPMC.hs  SteadyState.hs
formulas/src/Util/: CSV.hs  Cache.hs  DataSet.hs  Distribution.hs  Duration.hs  Execution.hs  Figure.hs  HaskFile.hs  MonPar.hs  Parser.hs  Repli.hs  Sample.hs  SteadyState.hs
formulas/test/: Test.hs
formulas/test/Test/: Execution.hs  MonPar.hs  ToyModel.hs  Util.hs
formulas/test/Test/ABC/: Lenormand2012.hs  SteadyState.hs
formulas/test/Test/Util/: Cache.hs  SteadyState.hs
formulas/tmp/: out  steps
openmole/: lhs.oms  run_comp_lhs
report/: 5steps.gnuplot  5steps.vl.json  L2.gnuplot  L2_vs_alpha.gnuplot  L2_vs_nsimus.gnuplot  comp_test_cases.gnuplot  easyABC_lenormand2012.gnuplot  epsilon_vs_realtime.gnuplot  epsilon_vs_time.gnuplot  fig_comp_test_cases.gnuplot  fig_l2_effects_lhs.gnuplot  fig_l2_ratio_effects_lhs.gnuplot  fig_l2_vs_bias_factor.gnuplot  fig_l2_vs_nsimus.gnuplot  fig_l2_vs_time_k.gnuplot  fig_l2_vs_time_k_v.gnuplot  fig_model_run_time_vs_theta_bias.gnuplot  fig_scatter_l2_time_lhs.gnuplot  fig_steps.gnuplot  fig_time_bias.gnuplot  fig_time_effects_lhs.gnuplot  fig_time_ratio_effects_lhs.gnuplot  l2_effects_lhs.gnuplot  l2_ratio_effects_lhs.gnuplot  l2_vs_bias_factor.gnuplot  l2_vs_nsimus.gnuplot  l2_vs_time_k.gnuplot  l2_vs_time_k_v.gnuplot  nsimus_vs_alpha.gnuplot  scatter_l2_time_lhs.gnuplot  steps.gnuplot  time_bias.gnuplot  time_effects_lhs.gnuplot  time_ratio_effects_lhs.gnuplot  time_ratio_lhs_k_v.gnuplot  toy_model_distribution.gnuplot
util/: populate_simu_specs.sh
