name:                formulas
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/formulas#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable formulas
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       statistics >= 0.14.0.2,
                       text >= 1.2.3.0,
                       vector >= 0.12,
                       parsec >= 3.1.13,
                       foldl >= 1.3.7,
                       containers >= 0.5

