name:                formulas
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/formulas#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Formulas,
                       Input,
                       Output,
                       ABC.Lenormand2012,
                       Distribution
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       protolude >= 0.2.2,
                       statistics >= 0.14.0.2,
                       text >= 1.2.3.0,
                       vector >= 0.12,
                       parsec >= 3.1.13,
                       foldl >= 1.3.7,
                       containers >= 0.5,
                       directory >= 1.3,
                       random >= 1.1,
                       MonadRandom >= 0.5,
                       mtl >= 2.2.2,
                       text-show >= 3.7.2,
                       hmatrix >= 0.18,
                       random-fu >= 0.2.7,
                       filepath >= 1.4.1,
                       mwc-random >= 0.13

executable formulas
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       protolude >= 0.2.2,
                       shake >= 0.16.4,
                       foldl >= 1.3.7,
                       Glob >= 0.7.4,
                       text >= 1.2.3.0,
                       text-show >= 3.7.2,
                       random >= 1.1,
                       MonadRandom >= 0.5,
                       vector >= 0.12,
                       filepath >= 1.4.1,
                       formulas
                       
test-suite formulas-test
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  hs-source-dirs:      test
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >=4.7 && <5,
                       protolude >= 0.2.2,
                       random >= 1.1,
                       vector >= 0.12,
                       hmatrix >= 0.18,
                       QuickCheck >= 2.10,
                       deepseq >= 1.4.3,
                       quickcheck-assertions >= 0.3,
                       MonadRandom >= 0.5,
                       ieee754 >= 0.8,
                       statistics >= 0.14.0.2,
                       formulas
  other-modules:       Test.ABC.Lenormand2012,
                       Test.ToyModel,
                       Test.Util
  default-language:    Haskell2010


